--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Bagus Setiawan Junior</title>
+  <title>Bagus Setiawan Junior - Biography</title>
 </head>
 <body>
-Welcome to my website.
+Assalaamualaikum.
 </body>
 </html>
